@@ -1,3 +1,7 @@
+2006-04-07  Brian Matherly  <pez4brian@users.sourceforge.net>
+	* src/docgen/PdfDoc.py: fix columns, error check images
+	* src/docgen/RTFDoc.py: error check images
+
 2006-04-07  Don Allingham  <don@gramps-project.org>
 	* src/EditPerson.py: Fix call to EditName, pylint fixes
 
